@@ -409,7 +409,8 @@ class TestSandboxArreglos
     @Test
     void testReiniciarArregloCadenas( )
     {
-        Object[] nuevosValores = new Object[]{ new Double( "0.01" ), new Character( 'a' ), "Hello", new Integer( "25" ), new Boolean( false ) };
+      
+		Object[] nuevosValores = new Object[]{ Double.valueOf( "0.01" ),  Character.valueOf( 'a' ), "Hello", Integer.valueOf("25"),  Boolean.valueOf( "false" ) };
 
         sencillo.reiniciarArregloCadenas( nuevosValores );
         assertEquals( nuevosValores.length, sencillo.getCantidadCadenas( ), "La nueva cantidad de cadenas no es la correcta" );
